# Enigma

./: CMakeLists.txt  Enigma.pro  README.md  config.h  enigma.cpp  enigma.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  state.h  style.css  switchPanel.cpp  switchPanel.h  switchPanel.ui  swithPanel.h.autosave  viewConfig.h
Enigma_machine/: CMakeLists.txt  config.cpp  config.h  enigma.cpp  enigma.h
QEnigma_machine/: qenigma.cpp
QtTests/: CMakeLists.txt  test.cpp
libs/: CMakeLists.txt
libs/Enigma_machine/: config.h  enigma.cpp  enigma.h
libs/QEnigma_machine/: CMakeLists.txt  qconfig.cpp  qconfig.h  qenigma.h
static/styles/: style.css  styleSwitch.css
